--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">             
